err/flanker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Cython'...
Listing './lib/python3.5/site-packages/Cython/Build'...
Listing './lib/python3.5/site-packages/Cython/Build/Tests'...
Listing './lib/python3.5/site-packages/Cython/Compiler'...
Listing './lib/python3.5/site-packages/Cython/Compiler/Tests'...
Listing './lib/python3.5/site-packages/Cython/Debugger'...
Listing './lib/python3.5/site-packages/Cython/Debugger/Tests'...
Listing './lib/python3.5/site-packages/Cython/Distutils'...
Listing './lib/python3.5/site-packages/Cython/Includes'...
Listing './lib/python3.5/site-packages/Cython/Includes/Deprecated'...
Listing './lib/python3.5/site-packages/Cython/Includes/cpython'...
Listing './lib/python3.5/site-packages/Cython/Includes/libc'...
Listing './lib/python3.5/site-packages/Cython/Includes/libcpp'...
Listing './lib/python3.5/site-packages/Cython/Includes/numpy'...
Listing './lib/python3.5/site-packages/Cython/Includes/posix'...
Listing './lib/python3.5/site-packages/Cython/Plex'...
Listing './lib/python3.5/site-packages/Cython/Runtime'...
Listing './lib/python3.5/site-packages/Cython/Tempita'...
Listing './lib/python3.5/site-packages/Cython/Tests'...
Listing './lib/python3.5/site-packages/Cython/Utility'...
Listing './lib/python3.5/site-packages/Cython-0.27.3.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cchardet'...
Listing './lib/python3.5/site-packages/cchardet-2.1.1.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/dnsq-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/expiringdict'...
Listing './lib/python3.5/site-packages/expiringdict-1.1.4.egg-info'...
Listing './lib/python3.5/site-packages/flanker'...
Listing './lib/python3.5/site-packages/flanker/addresslib'...
Listing './lib/python3.5/site-packages/flanker/addresslib/drivers'...
Listing './lib/python3.5/site-packages/flanker/addresslib/plugins'...
Compiling './lib/python3.5/site-packages/flanker/addresslib/tokenizer.py'...
***   File "./lib/python3.5/site-packages/flanker/addresslib/tokenizer.py", line 35
    UNI_WHITE  = re.compile(ur'''
                        [
                            \u0020\u00a0\u1680\u180e
                            \u2000-\u200a
                            \u2028\u202f\u205f\u3000
                        ]*
                        ''', re.MULTILINE | re.VERBOSE | re.UNICODE)
                                 
                         
                                                    
                                         
                                                    
                          
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flanker/mime'...
Listing './lib/python3.5/site-packages/flanker/mime/message'...
Listing './lib/python3.5/site-packages/flanker/mime/message/fallback'...
Listing './lib/python3.5/site-packages/flanker/mime/message/headers'...
Compiling './lib/python3.5/site-packages/flanker/mime/message/scanner.py'...
***   File "./lib/python3.5/site-packages/flanker/mime/message/scanner.py", line 28
    raise DecodingError("Malformed MIME message"), None, sys.exc_info()[2]
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flanker-0.4.38.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pyximport'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/regex-2018.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/addresslib'...
Compiling './lib/python3.5/site-packages/tests/addresslib/corrector_test.py'...
***   File "./lib/python3.5/site-packages/tests/addresslib/corrector_test.py", line 55
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tests/addresslib/plugins'...
Listing './lib/python3.5/site-packages/tests/mime'...
Listing './lib/python3.5/site-packages/tests/mime/message'...
Listing './lib/python3.5/site-packages/tests/mime/message/fallback'...
Listing './lib/python3.5/site-packages/tests/mime/message/headers'...
Compiling './lib/python3.5/site-packages/tests/mime/message/scanner_test.py'...
***   File "./lib/python3.5/site-packages/tests/mime/message/scanner_test.py", line 118
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
